--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>vlaaad</groupId>
   <artifactId>reveal</artifactId>
-  <version>0.1.0-ea123</version>
+  <version>1.0.126</version>
   <name>reveal</name>
   <dependencies>
     <dependency>
@@ -53,6 +53,6 @@
   </repositories>
   <scm>
     <url>https://github.com/vlaaad/reveal</url>
-    <tag>0.1.0-ea123</tag>
+    <tag>1.0.126</tag>
   </scm>
 </project>
